# zettelkasten

./: .env.example  .gitignore  .zettelkasten  CLAUDE.md  INTERVIEW_GENERATION.md  README.md  pyproject.toml  run.sh
.claude/: settings.local.json
tests/: __init__.py
zettelkasten/: __init__.py  cli.py
zettelkasten/core/: __init__.py  config.py  models.py  workflow.py
zettelkasten/generators/: __init__.py  index_generator.py  note_content_generator.py  orphan_generator.py  person_research_generator.py  zettel_generator.py
zettelkasten/processors/: __init__.py  article_processor.py  concept_extractor.py  transcription.py  youtube_processor.py
zettelkasten/utils/: episode_manager.py  interview_generator.py  orphan_finder.py  project_root.py  rss_manager.py  url_detector.py  vault_scanner.py
zettelkasten/web/: README.md  app.py
zettelkasten/web/static/css/: style.css
zettelkasten/web/templates/: add_url.html  add_url_result.html  base.html  create_note.html  episodes.html  error.html  home.html  index.html  note.html  staging.html  staging_edit.html  staging_file.html  workflow_interview_questions.html  workflows.html
